<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8CBBF1">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="263dp"
                android:layout_height="50dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="75dp"
                android:text="KELOMPOK 7"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="260dp"
                android:layout_height="0dp"
                android:layout_marginBottom="576dp"
                android:text="Pemrograman Perangkat Bergerak"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Linear_bottom"
            android:layout_width="0dp"
            android:layout_height="469dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_weight="1"
                android:background="#FFFFBC58">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="153dp"
                    android:text="@string/Text_Lorem"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFBC58"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/Text_Nama1"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Text_PROFILE"
                    android:textColor="#2196F3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFBC58"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/Text_Nama2"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Text_PROFILE"
                    android:textColor="#2196F3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFBC58"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/Text_Nama3"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Text_PROFILE"
                    android:textColor="#2196F3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFBC58"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/Text_Nama4"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Text_PROFILE"
                    android:textColor="#2196F3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="#FFFFBC58"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/Text_Nama5"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Text_PROFILE"
                    android:textColor="#2196F3" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>